# spotiwise

./: .gitignore  pyproject.toml  refactor_plan.md  setup.py  tags
prototype/: __init__.py  client.py  example.py  models.py
spotipy/: __init__.py  client.py  example_api_gateway.py  oauth2.py  object_classes.py  spotipy_classes.py  util.py
spotiwise/: __init__.py  client.py  oauth2.py  object_classes.py  util.py
tests/: authtests.py  authtests2.py  client_credentials_tests.py  test_oauth.py  tests.py
