[tool.poetry]
name = "spotiwise"
version = "0.10.9"
description = "Custom Spotify library using true Python objects"
authors = ["Wisdom Wolf <wisdomwolf@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6"
requests = ">=2.3.0"
six = ">=1.10.0"
spotipy = "^2.23.0"  # Use latest stable version



[tool.dephell.main]
# read from poetry format
from = {format = "poetry", path = "pyproject.toml"}
versioning = "semver"
to = {format = "poetry", path = "pyproject.toml"}
tag = "v."

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
